[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/gui/gui_container_equipment.tscn" type="PackedScene" id=1]
[ext_resource path="res://source/gui/GuiHud.gd" type="Script" id=2]
[ext_resource path="res://assets/texture/gui/gui_hud_button_combat.png" type="Texture" id=3]
[ext_resource path="res://assets/texture/gui/gui_hud_equipment_background.png" type="Texture" id=4]
[ext_resource path="res://assets/texture/gui/gui_hud_button_item_0.png" type="Texture" id=5]
[ext_resource path="res://assets/texture/gui/gui_hud_button_item_1.png" type="Texture" id=6]
[ext_resource path="res://resource/gui_hud_equipped.tres" type="Resource" id=7]

[node name="GuiHud" type="CanvasLayer"]
script = ExtResource( 2 )
equipment = ExtResource( 7 )

[node name="ContainerButtons" type="AspectRatioContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -340.0
margin_bottom = 340.0
grow_horizontal = 0
rect_scale = Vector2( 0.75, 0.75 )
rect_pivot_offset = Vector2( 468, 0 )
size_flags_horizontal = 0
size_flags_vertical = 0
alignment_horizontal = 0
alignment_vertical = 0

[node name="MarginButtons" type="MarginContainer" parent="ContainerButtons"]
margin_right = 468.0
margin_bottom = 468.0
custom_constants/margin_right = 64
custom_constants/margin_top = 64
custom_constants/margin_left = 64
custom_constants/margin_bottom = 64

[node name="MarginBackground" type="MarginContainer" parent="ContainerButtons/MarginButtons"]
margin_left = 64.0
margin_top = 64.0
margin_right = 404.0
margin_bottom = 404.0

[node name="TextureRect" type="TextureRect" parent="ContainerButtons/MarginButtons/MarginBackground"]
margin_right = 340.0
margin_bottom = 340.0
texture = ExtResource( 4 )
stretch_mode = 4

[node name="MarginItem1" type="MarginContainer" parent="ContainerButtons/MarginButtons"]
margin_left = 64.0
margin_top = 64.0
margin_right = 404.0
margin_bottom = 404.0
custom_constants/margin_right = 112
custom_constants/margin_top = -48
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32

[node name="Button" type="TextureButton" parent="ContainerButtons/MarginButtons/MarginItem1"]
margin_left = 81.0
margin_top = 81.0
margin_right = 179.0
margin_bottom = 179.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 6 )
stretch_mode = 3

[node name="ItemSlot1" parent="ContainerButtons/MarginButtons/MarginItem1/Button" instance=ExtResource( 1 )]
unique_name_in_owner = true
margin_left = -64.0
margin_top = -64.0
margin_right = 64.0
margin_bottom = 64.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="MarginItem2" type="MarginContainer" parent="ContainerButtons/MarginButtons"]
margin_left = 64.0
margin_top = 64.0
margin_right = 404.0
margin_bottom = 404.0
custom_constants/margin_right = -48
custom_constants/margin_top = 80
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32

[node name="Button" type="TextureButton" parent="ContainerButtons/MarginButtons/MarginItem2"]
margin_left = 161.0
margin_top = 145.0
margin_right = 259.0
margin_bottom = 243.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 5 )
stretch_mode = 3

[node name="ItemSlot2" parent="ContainerButtons/MarginButtons/MarginItem2/Button" instance=ExtResource( 1 )]
unique_name_in_owner = true
margin_left = -64.0
margin_top = -64.0
margin_right = 64.0
margin_bottom = 64.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="MarginTool" type="MarginContainer" parent="ContainerButtons/MarginButtons"]
margin_left = 64.0
margin_top = 64.0
margin_right = 404.0
margin_bottom = 404.0
custom_constants/margin_right = 180
custom_constants/margin_top = 180
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32

[node name="Button" type="TextureButton" parent="ContainerButtons/MarginButtons/MarginTool"]
margin_left = 32.0
margin_top = 180.0
margin_right = 160.0
margin_bottom = 308.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 3 )
stretch_mode = 3

[node name="ToolSlot" parent="ContainerButtons/MarginButtons/MarginTool/Button" instance=ExtResource( 1 )]
unique_name_in_owner = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 128.0
margin_bottom = 128.0
